--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .app__body {
   display: flex;
   width: 100%;
   padding: 40px;
+  box-sizing: border-box;
 }
