--- a/src/components/Feed.css
+++ b/src/components/Feed.css
@@ -23,6 +23,8 @@
   padding-left: 13px;
   color: #999;
   border-radius: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 .feed__input > form {
@@ -36,9 +38,10 @@
   border: none;
   outline: none;
   font-weight: 600;
-  margin-left: 10px;
   flex: 1;
   color: #202020;
+  padding: 10px;
+  align-self: center;
 }
 .feed__input > form > button {
   display: none;
