--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -31,5 +31,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px;
+  padding: 5px 30px;
+  font-size: 13px;
 }
