--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,13 +1,9 @@
+.login {
+  height: 100vh;
+}
 .login__header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   position: relative;
   padding: 20px;
-  box-sizing: border-box;
-  width: 100%;
-  flex-wrap: wrap;
-  height: 100%;
 }
 
 .login__text {
@@ -23,6 +19,7 @@
   object-fit: contain;
   width: 100%;
   margin-left: 10px;
+  margin-top: 10px;
 }
 
 .login__body {
@@ -71,12 +68,30 @@
 .login__option {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 .login__option > button {
   border-radius: 10px;
   padding: 10px;
   box-shadow: 0 2px 5px #d3cdd3;
+  color: #0074b5 !important;
   margin-bottom: 10px;
+  width: 100%;
+}
+
+.login__options strong {
+  margin-left: 5px;
+}
+
+.signup__details {
+  background-color: transparent !important;
+  border-radius: 15px !important;
+}
+.signup__details form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+}
+.MuiAccordion-root::before {
+  content: none !important;
+  outline: none !important;
 }
