--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -42,3 +42,34 @@
   display: flex;
   align-items: center;
 }
+
+.header__logout {
+  position: relative;
+}
+.header__logoutOption {
+  position: absolute;
+  top: 50px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  background: #d3d3d3;
+  border-radius: 0 0 5px 5px;
+  margin: 0;
+}
+
+.header__logoutOption > button {
+  padding: 10px;
+  width: 100%;
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  color: #505050;
+  text-align: left;
+}
+
+.header__logoutOption > button:hover {
+  background-color: #c2c2c2;
+  color: #eef3f8;
+  transition: background-color 1000ms ease-out;
+}
