--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
 .app {
   background: #f3f2ef;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  box-sizing: border-box;
 }
 
 .app__body {
+  flex: 1;
+  width: 80%;
+  margin: auto;
   display: flex;
-  width: 100%;
   padding: 40px;
   box-sizing: border-box;
 }
