--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: space-evenly;
   border-bottom: 1px solid #d3d3d3;
-  align-items: center;
   padding: 10px 0;
-  width: 100%;
   position: sticky;
   top: 0;
   z-index: 99;
   background: #fff;
+  overflow-x: none;
+  box-sizing: border-box;
 }
 .header__left {
   display: flex;
@@ -26,7 +26,7 @@
   align-items: center;
   border-radius: 5px;
   height: 22px;
-  color: #999;
+  color: #444343;
   background: #eef3f8;
   padding: 10px;
   cursor: pointer;
@@ -41,35 +41,4 @@
 .header__right {
   display: flex;
   align-items: center;
-}
-
-.header__logout {
-  position: relative;
-}
-.header__logoutOption {
-  position: absolute;
-  top: 50px;
-  z-index: 1;
-  display: flex;
-  flex-direction: column;
-  background: #d3d3d3;
-  border-radius: 0 0 5px 5px;
-  margin: 0;
-}
-
-.header__logoutOption > button {
-  padding: 10px;
-  width: 100%;
-  border: none;
-  background-color: transparent;
-  outline: none;
-  cursor: pointer;
-  color: #505050;
-  text-align: left;
-}
-
-.header__logoutOption > button:hover {
-  background-color: #c2c2c2;
-  color: #eef3f8;
-  transition: background-color 1000ms ease-out;
 }
