--- a/src/components/InputOption.css
+++ b/src/components/InputOption.css
@@ -1,7 +1,11 @@
 .inputOption {
+  padding: 0 !important;
+  font-size: 1rem !important;
+}
+
+.inputOption div {
   display: flex;
   align-items: center;
-  margin-top: 15px;
   color: #999;
   padding: 10px;
   cursor: pointer;
@@ -13,6 +17,6 @@
   color: #505050;
 }
 
-.inputOption > h4 {
+.inputOption h4 {
   margin-left: 5px;
 }
