--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -8,7 +8,9 @@
 }
 
 .sidebar__avatar {
-  margin-bottom: 10px;
+  width: 60px !important;
+  height: 60px !important;
+  border: 2px solid #fff !important;
 }
 
 .sidebar__top {
@@ -24,7 +26,7 @@
 }
 
 .sidebar__top > img {
-  margin-bottom: -20px;
+  margin-bottom: -33px;
   width: 100%;
   height: 100px;
   object-fit: cover;
