--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,10 @@
   margin: 0;
   padding: 0;
 }
+html,
 body {
-  margin: 0;
+  width: 100%;
+  background: #f3f2ef;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
